Fix: spacing on home page with header

--- a/home/homepage.scss
+++ b/home/homepage.scss
@@ -14,16 +14,11 @@ body {
   color: $dark-blue;
   font-family: $font1;}
 
-header {
+main > h1 {
   text-align: center;
-  margin: 0;
-  padding: 0;
-  color: $dark-blue;
   background-color: $light-blue;
-
-  h1 {
-    margin: 0;
-    padding: 0;}}
+  margin: 0;
+}
 
 
 /*--- Navigation Bar ---*/
@@ -32,8 +27,9 @@ header {
     position: sticky;
     top: 0;
     background-color: $light-blue;
+    z-index: 1;
 }
-.logo img {
+.header-logo img {
     height: 90px;
     width: auto;
     border-radius: 50%;
@@ -242,7 +238,7 @@ nav {
     align-items: flex-start;
     position: relative;
   }
-  .logo img {
+  .header-logo img {
     height: 85px;
     width: auto;
     border-radius: 50%;
